--- a/Tools.ipynb
+++ b/Tools.ipynb
@@ -1183,6 +1183,105 @@
     "    # Code à l'intérieur du contexte\n",
     "    print(\"À l'intérieur du contexte\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Metric:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.df = pd.DataFrame(index = [\"equityInitial\", \"totalTrades\", \"totalPnl\", \"winRate\",\n",
+    "                                        \"Expentancy\", \"equityFinal\", \"equityPeak\",\n",
+    "                                        \"amoungWin\", \"amoungLoss\", \"avgWin\", \"avgLoss\",\n",
+    "                                        \"bestTrade\", \"worseTrade\", \"profitFactor\"]\n",
+    "                               )\n",
+    "    \n",
+    "    def pnl(self, r):\n",
+    "        x = (1 + r).prod()\n",
+    "        return x    \n",
+    "    \n",
+    "    def average(self, r):\n",
+    "        if len(r) == 0:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            x = (1+r).prod()\n",
+    "            return x**(1/len(r))\n",
+    "    \n",
+    "    def expectancy(self, winRate, avgWin, avgLoss):\n",
+    "        return winRate*avgWin + (1 - winRate)*avgLoss    \n",
+    "    \n",
+    "    def sharpe_ratio(self, r):\n",
+    "        mean = (1+r).prod()\n",
+    "        std = np.std(r)\n",
+    "        return mean / std\n",
+    "    \n",
+    "    \n",
+    "    def kurtosis(self, r, n = 8):\n",
+    "        if len(r) > n:\n",
+    "            return scipy.stats.kurtosis(r)\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "    def skewness(self, r, n = 8):\n",
+    "        if len(r) > n:\n",
+    "            return scipy.stats.skew(r)\n",
+    "        else:\n",
+    "            return 0\n",
+    "    \n",
+    "    \n",
+    "    def excecute(self, trade):\n",
+    "        metrics = {}\n",
+    "        try:\n",
+    "            self.date = str(trade.index[-1])\n",
+    "        except IndexError:\n",
+    "            self.date = None\n",
+    "        \n",
+    "        loc = np.where((trade['status'] == \"close\"))\n",
+    "        nbTrades = len(loc[0])\n",
+    "        loc = np.where((trade['status'] == \"close\") & (trade.pnl > 0))\n",
+    "        winTrades = len(loc[0])\n",
+    "        loc = np.where((trade['status'] == \"close\") & (trade.pnl <= 0))\n",
+    "        lossTrades = len(loc[0])\n",
+    "        \n",
+    "        try:\n",
+    "            winRate = winTrades / nbTrades\n",
+    "        except ZeroDivisionError:\n",
+    "            winRate = 0\n",
+    "        try:\n",
+    "            lossRate = lossTrades / nbTrades\n",
+    "        except ZeroDivisionError:\n",
+    "            lossRate = 0\n",
+    "        \n",
+    "        loc = np.where(trade['gp'] != 0)\n",
+    "        \n",
+    "        avgGp = trade.iloc[loc][\"gp\"].mean()\n",
+    "        amoungWin = trade.loc[trade['gp'] > 0, \"gp\"].sum()\n",
+    "        amoungLoss = trade.loc[trade['gp'] <= 0, \"gp\"].sum()\n",
+    "        \n",
+    "        trade_ = trade.iloc[loc].copy()\n",
+    "        avgWin = trade_.loc[trade_['gp'] > 0, \"gp\" ].mean()\n",
+    "        avgLoss = trade_.loc[trade_['gp'] <= 0, \"gp\" ].mean()\n",
+    "        \n",
+    "        profitFactor = amoungWin / abs(amoungLoss)\n",
+    "        \n",
+    "        totalPnl = trade.gp.sum()\n",
+    "        exp = self.expectancy(winRate = winRate, avgWin = avgWin, avgLoss = avgLoss)\n",
+    "        \n",
+    "        keys = [\"totalTrades\", \"totalPnl\", \"winRate\", \"lossRate\", \"expentancy\",\n",
+    "                \"amoungWin\", \"amoungLoss\", \"avgWin\", \"avgLoss\", \"profitFactor\"]\n",
+    "        \n",
+    "        values = [nbTrades, totalPnl, winRate, lossRate, exp, \n",
+    "                  amoungWin, amoungLoss, avgWin, avgLoss, profitFactor]\n",
+    "        \n",
+    "        for key, value in zip(keys, values):\n",
+    "            metrics[key] = value\n",
+    "        \n",
+    "        return metrics\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
