--- a/labs.ipynb
+++ b/labs.ipynb
@@ -284,18 +284,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from magent import MAgentThread\n",
     "from master import  MasterAgentThread\n",
@@ -338,62 +329,51 @@
     "\n",
     "\n",
     "# Agent details\n",
-    "agentID = []\n",
-    "agentID.append((1, \"BTC\", \"MOMENTUM\", menvs[0]))\n",
-    "agentID.append((2, \"ETH\", \"TRIPLEMA\", menvs[1]))\n",
-    "agentID.append((3, \"SOL\", \"MOMENTUM\", menvs[2]))\n",
-    "agentID.append((4, \"EGLD\", \"TRIPLEMA\", menvs[3]))\n",
+    "AGENT_PARAMS = [\n",
+    "    ((1, \"BTC\"), menvs[0]),\n",
+    "    ((2, \"ETH\"), menvs[1]),\n",
+    "    ((3, \"SOL\"), menvs[2]),\n",
+    "    ((4, \"EGLD\"), menvs[3]),\n",
+    "]\n",
     "\n",
-    "N = len(agentID)\n",
+    "N = len(AGENT_PARAMS)\n",
     "\n",
-    "# Set agent and master bus\n",
-    "agent_bus = {\n",
-    "    \"fstep\" : [False] * N,\n",
-    "    \"msg\" : {},\n",
-    "    \"stop\" : False\n",
-    "}\n",
-    "master_bus = {\n",
-    "    \"msg\" : {},\n",
-    "    \"activeAgent\" : None,\n",
-    "    \"stop\" : False\n",
-    "}\n",
-    "\n",
-    "# Set multithread\n",
-    "def custom_action():\n",
-    "    print(\" //////////////// *** Barrier passee *** \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\")\n",
-    "    \n",
-    "condition = Condition()\n",
-    "barrier = Barrier(N, action=custom_action)\n",
-    "\n",
-    "# Parameter\n",
-    "def set_agent_params(agentId, env, agent_bus=agent_bus, master_bus=master_bus, condition=condition, barrier=barrier):\n",
-    "    return {\"agentId\" : agentId[0], \"symbol\" : agentId[1], \"env\" : env, \"policy_name\" : agentId[2], \"condition\" : condition, \"barrier\" : barrier, \"agent_bus\" : agent_bus, \"master_bus\" : master_bus}\n",
-    "\n",
-    "master_params = {\"condition\" : condition, \"agent_bus\" : agent_bus, \"master_bus\" : master_bus}\n",
-    "params = [set_agent_params(agentId, env) for agentId, env in zip(agentID, menvs)]\n"
+    "STRATEGIES = [\n",
+    "    ((1, \"BTC\"), \"MOMENTUM\", 3),\n",
+    "    ((2, \"ETH\"), \"TRIPLEMA\", (3, 7, 14)),\n",
+    "    ((3, \"SOL\"), \"MOMENTUM\", 0),\n",
+    "    ((4, \"EGLD\"), \"TRIPLEMA\", (14, 21, 35)),\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "MAgentThread.__init__() takes 7 positional arguments but 8 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m master\u001b[38;5;241m.\u001b[39mset_barrier(n\u001b[38;5;241m=\u001b[39mN)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m agent_param, strategie \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(AGENT_PARAMS, STRATEGIES):\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mmaster\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddAgent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43magent_param\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     master\u001b[38;5;241m.\u001b[39mupdate_params(\u001b[38;5;241m*\u001b[39mstrategie)\n\u001b[0;32m      8\u001b[0m master\u001b[38;5;241m.\u001b[39mactive_agents()\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\master.py:30\u001b[0m, in \u001b[0;36mMasterAgentThread.addAgent\u001b[1;34m(self, Id, env)\u001b[0m\n\u001b[0;32m     28\u001b[0m sync \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mevent, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbarrier, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magent_bus[Id], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmaster_bus[Id]]\n\u001b[0;32m     29\u001b[0m params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(Id) \u001b[38;5;241m+\u001b[39m [env] \u001b[38;5;241m+\u001b[39m sync\n\u001b[1;32m---> 30\u001b[0m agent \u001b[38;5;241m=\u001b[39m \u001b[43mMAgentThread\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magents\u001b[38;5;241m.\u001b[39mappend(agent)\n",
+      "\u001b[1;31mTypeError\u001b[0m: MAgentThread.__init__() takes 7 positional arguments but 8 were given"
+     ]
+    }
+   ],
    "source": [
-    "from queue import Queue\n",
+    "master = MasterAgentThread(env)\n",
+    "master.set_barrier(n=N)\n",
     "\n",
+    "for agent_param, strategie in zip(AGENT_PARAMS, STRATEGIES):\n",
+    "    master.addAgent(*agent_param)\n",
+    "    master.update_params(*strategie)\n",
     "\n",
-    "d = Queue()\n",
-    "\n",
-    "d.put({\"msg\": \"xxx\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.get()"
+    "master.active_agents()\n",
+    "master.run()"
    ]
   },
   {
@@ -401,11 +381,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "r = (0, 1)\n",
+    "list(r)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,24 +411,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " ---------------   Master : Let's go ... \n",
-      "master_bus : {'msg': {}, 'activeAgent': 1, 'stop': False}\n",
-      "Master are waiting for agents finish to execute thier work ... \n",
-      " agent_bus : {'fstep': [False, False, False, False], 'msg': {}, 'stop': False}\n",
-      "1 waiting master's signal ... \n",
-      "2 waiting master's signal ... \n",
-      "3 waiting master's signal ... \n",
-      "4 waiting master's signal ... \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "master.start()\n",
     "agent_1.start()\n",
@@ -462,20 +430,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 5, 4, 9]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[3, 5] + [4, 9]"
    ]
@@ -501,17 +458,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def o(a, b):\n",
     "    print(a, b)\n",
@@ -776,9 +725,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Commande 1\n",
+      "Commande 1\n",
+      "Commande 1\n",
+      "Commande 1\n",
+      "Commande 2\n",
+      "Commande 2\n",
+      "Commande 2\n",
+      "Commande 2\n",
+      "Commande 3\n",
+      "Commande 3\n",
+      "Commande 3\n",
+      "Commande 3\n",
+      "Commande 4\n",
+      "Commande 4\n",
+      "Commande 4\n",
+      "Commande 4\n"
+     ]
+    }
+   ],
    "source": [
     "import multiprocessing\n",
     "import time\n",
@@ -848,9 +820,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Commande 1\n"
+     ]
+    }
+   ],
    "source": [
     "import multiprocessing\n",
     "import time\n",
@@ -924,36 +904,6 @@
     "    master_instance.send_instructions(instructions)\n",
     "\n",
     "    master_instance.stop_agents()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'x': 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = {}\n",
-    "\n",
-    "class Test:\n",
-    "    \n",
-    "    def __init__(self, a):\n",
-    "        self.a = a\n",
-    "        \n",
-    "    def change(self):\n",
-    "        self.a[\"x\"] = 0\n",
-    "        \n",
-    "\n",
-    "Test(test).change()\n",
-    "\n",
-    "print(test)"
    ]
   }
  ],
