--- a/labs.ipynb
+++ b/labs.ipynb
@@ -284,9 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from magent import MAgentThread\n",
     "from master import  MasterAgentThread\n",
@@ -330,10 +339,10 @@
     "\n",
     "# Agent details\n",
     "AGENT_PARAMS = [\n",
-    "    ((1, \"BTC\"), menvs[0]),\n",
-    "    ((2, \"ETH\"), menvs[1]),\n",
-    "    ((3, \"SOL\"), menvs[2]),\n",
-    "    ((4, \"EGLD\"), menvs[3]),\n",
+    "    [(1, \"BTC\"), menvs[0]],\n",
+    "    [(2, \"ETH\"), menvs[1]],\n",
+    "    [(3, \"SOL\"), menvs[2]],\n",
+    "    [(4, \"EGLD\"), menvs[3]],\n",
     "]\n",
     "\n",
     "N = len(AGENT_PARAMS)\n",
@@ -348,19 +357,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "MAgentThread.__init__() takes 7 positional arguments but 8 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m master\u001b[38;5;241m.\u001b[39mset_barrier(n\u001b[38;5;241m=\u001b[39mN)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m agent_param, strategie \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(AGENT_PARAMS, STRATEGIES):\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mmaster\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddAgent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43magent_param\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     master\u001b[38;5;241m.\u001b[39mupdate_params(\u001b[38;5;241m*\u001b[39mstrategie)\n\u001b[0;32m      8\u001b[0m master\u001b[38;5;241m.\u001b[39mactive_agents()\n",
-      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\master.py:30\u001b[0m, in \u001b[0;36mMasterAgentThread.addAgent\u001b[1;34m(self, Id, env)\u001b[0m\n\u001b[0;32m     28\u001b[0m sync \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mevent, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbarrier, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magent_bus[Id], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmaster_bus[Id]]\n\u001b[0;32m     29\u001b[0m params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(Id) \u001b[38;5;241m+\u001b[39m [env] \u001b[38;5;241m+\u001b[39m sync\n\u001b[1;32m---> 30\u001b[0m agent \u001b[38;5;241m=\u001b[39m \u001b[43mMAgentThread\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magents\u001b[38;5;241m.\u001b[39mappend(agent)\n",
-      "\u001b[1;31mTypeError\u001b[0m: MAgentThread.__init__() takes 7 positional arguments but 8 were given"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-13:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
+      "Exception in thread Thread-16:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
+      "Exception in thread Thread-15:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
+      "Exception in thread Thread-14:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
+      "    master_bus, master_status, active = self.get_master_bus()\n",
+      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
+      "    master_bus, master_status, active = self.get_master_bus()\n",
+      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
+      "    from_master = self.master_bus[self.Id].get()\n",
+      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
+      "TypeError: 'Queue' object is not subscriptable\n",
+      "    from_master = self.master_bus[self.Id].get()\n",
+      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
+      "TypeError: 'Queue' object is not subscriptable\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
+      "    master_bus, master_status, active = self.get_master_bus()\n",
+      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
+      "    master_bus, master_status, active = self.get_master_bus()\n",
+      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
+      "    from_master = self.master_bus[self.Id].get()\n",
+      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
+      "TypeError: 'Queue' object is not subscriptable\n",
+      "    from_master = self.master_bus[self.Id].get()\n",
+      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
+      "TypeError: 'Queue' object is not subscriptable\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'BTC'), <system.menv.MEnv object at 0x0000017E83E18D50>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E10710>, <queue.Queue object at 0x0000017E83E10FD0>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
+      "[(2, 'ETH'), <system.menv.MEnv object at 0x0000017E83E1B350>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E110D0>, <queue.Queue object at 0x0000017E83E10450>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
+      "[(3, 'SOL'), <system.menv.MEnv object at 0x0000017E83D2AFD0>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E13910>, <queue.Queue object at 0x0000017E83E11150>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
+      "[(4, 'EGLD'), <system.menv.MEnv object at 0x0000017E83D32910>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E12AD0>, <queue.Queue object at 0x0000017E83E12090>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
+      "id :  (1, 'BTC')\n",
+      "(1, 'BTC') waiting master's signal ... \n",
+      "id :  (2, 'ETH')\n",
+      "(2, 'ETH') waiting master's signal ... \n",
+      "id :  (3, 'SOL')\n",
+      "(3, 'SOL') waiting master's signal ... \n",
+      "id :  (4, 'EGLD')\n",
+      "(4, 'EGLD') waiting master's signal ... \n",
+      " ---------------   Master : Let's go ... \n",
+      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000017E83E10FD0>, (2, 'ETH'): <queue.Queue object at 0x0000017E83E10450>, (3, 'SOL'): <queue.Queue object at 0x0000017E83E11150>, (4, 'EGLD'): <queue.Queue object at 0x0000017E83E12090>, 'activeAgent': 1}\n",
+      "Master wait finish thier work ... \n"
      ]
     }
    ],
@@ -377,13 +445,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "r = (0, 1)\n",
-    "list(r)"
+    "# *End*"
    ]
   },
   {
@@ -434,7 +499,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[3, 5] + [4, 9]"
+    "d = {\"a\":1, \"b\":2}\n",
+    "d\n",
+    "for x, y in d:\n",
+    "    print(x, y)"
    ]
   },
   {
@@ -454,19 +522,6 @@
     "from multiprocessing import Process, Manager, Queue, Barrier, Event, Semaphore\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def o(a, b):\n",
-    "    print(a, b)\n",
-    "    \n",
-    "t = (1, 2)\n",
-    "o(*t)"
    ]
   },
   {
@@ -725,32 +780,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Commande 1\n",
-      "Commande 1\n",
-      "Commande 1\n",
-      "Commande 1\n",
-      "Commande 2\n",
-      "Commande 2\n",
-      "Commande 2\n",
-      "Commande 2\n",
-      "Commande 3\n",
-      "Commande 3\n",
-      "Commande 3\n",
-      "Commande 3\n",
-      "Commande 4\n",
-      "Commande 4\n",
-      "Commande 4\n",
-      "Commande 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import multiprocessing\n",
     "import time\n",
@@ -820,17 +852,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Commande 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import multiprocessing\n",
     "import time\n",
