--- a/labs.ipynb
+++ b/labs.ipynb
@@ -276,6 +276,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Config menv\n",
+    "def set_config(symbol, capital = CAPITAL, interval = INTERVAL, start = START, end = END):\n",
+    "    config = {\"capital\" : capital, \"interval\" : interval,\n",
+    "              \"symbol\" : symbol, \"start\" : start, \"end\" : end}\n",
+    "    return config\n",
+    "\n",
+    "\n",
+    "def set_env(symbol):\n",
+    "    config = set_config(symbol)\n",
+    "    env = MEnv(**config)\n",
+    "    return env\n",
+    "\n",
+    "menvs = [set_env(symbol) for symbol in TICKERS]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -284,18 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from magent import MAgentThread\n",
     "from master import  MasterAgentThread\n",
@@ -315,34 +328,23 @@
     "START = \"2023-01-01\"\n",
     "END = \"2023-10-01\"\n",
     "INTERVAL = \"1d\"\n",
-    "\n",
     "CAPITAL = 100\n",
+    "\n",
     "config = {\"capital\" : CAPITAL, \"interval\" : INTERVAL,\n",
     "          \"symbols\" : TICKERS, \"start\" : START, \"end\" : END}\n",
     "env = Env(**config)\n",
     "\n",
-    "\n",
-    "# Config menv\n",
-    "def set_config(symbol, capital = CAPITAL, interval = INTERVAL, start = START, end = END):\n",
-    "    config = {\"capital\" : capital, \"interval\" : interval,\n",
-    "              \"symbols\" : symbol, \"start\" : start, \"end\" : end}\n",
-    "    return config\n",
-    "\n",
-    "\n",
-    "def set_env(symbol):\n",
-    "    config = set_config(symbol)\n",
-    "    env = MEnv(**config)\n",
-    "    return env\n",
-    "\n",
-    "menvs = [set_env(symbol) for symbol in TICKERS]\n",
-    "\n",
+    "menv_1 = MEnv(symbol=\"BTC\", capital=CAPITAL, interval=INTERVAL, start=START, end=END)\n",
+    "menv_2 = MEnv(symbol=\"ETH\", capital=CAPITAL, interval=INTERVAL, start=START, end=END)\n",
+    "menv_3 = MEnv(symbol=\"SOL\", capital=CAPITAL, interval=INTERVAL, start=START, end=END)\n",
+    "menv_4 = MEnv(symbol=\"EGLD\", capital=CAPITAL, interval=INTERVAL, start=START, end=END)\n",
     "\n",
     "# Agent details\n",
     "AGENT_PARAMS = [\n",
-    "    [(1, \"BTC\"), menvs[0]],\n",
-    "    [(2, \"ETH\"), menvs[1]],\n",
-    "    [(3, \"SOL\"), menvs[2]],\n",
-    "    [(4, \"EGLD\"), menvs[3]],\n",
+    "    [(1, \"BTC\"), menv_1],\n",
+    "    [(2, \"ETH\"), menv_2],\n",
+    "    [(3, \"SOL\"), menv_3],\n",
+    "    [(4, \"EGLD\"), menv_4],\n",
     "]\n",
     "\n",
     "N = len(AGENT_PARAMS)\n",
@@ -357,77 +359,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start id :  (1, 'BTC')\n",
+      "(1, 'BTC') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "(1, 'BTC') waiting master's signal ... \n",
+      "Start id :  (2, 'ETH')\n",
+      "(2, 'ETH') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "(2, 'ETH') waiting master's signal ... \n",
+      "Start id :  (3, 'SOL')\n",
+      "(3, 'SOL') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "(3, 'SOL') waiting master's signal ... \n",
+      "Start id :  (4, 'EGLD')\n",
+      "(4, 'EGLD') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "(4, 'EGLD') waiting master's signal ... \n",
+      " ---------------   Master : Let's go ... \n",
+      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000025090D85110>, (2, 'ETH'): <queue.Queue object at 0x0000025090D86F90>, (3, 'SOL'): <queue.Queue object at 0x0000025090D7B110>, (4, 'EGLD'): <queue.Queue object at 0x0000025090D79ED0>, 'activeAgent': 1}\n",
+      "Master wait finish thier work ... \n",
+      "(1, 'BTC') - Master signal : start work\n",
+      "(4, 'EGLD') - Master signal : start work\n",
+      "(3, 'SOL') - Master signal : start work\n",
+      "(2, 'ETH') - Master signal : start work\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-13:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
-      "Exception in thread Thread-16:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
-      "Exception in thread Thread-15:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
-      "Exception in thread Thread-14:\n",
+      "Exception in thread Thread-7:\n",
       "Traceback (most recent call last):\n",
       "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
       "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
+      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
+      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
+      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
+      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
+      "    raise ValueError(\"time data %r does not match format %r\" %\n",
+      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n",
+      "Exception in thread Thread-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
       "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
-      "    master_bus, master_status, active = self.get_master_bus()\n",
-      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
+      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
+      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
+      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
+      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
+      "    raise ValueError(\"time data %r does not match format %r\" %\n",
+      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n",
+      "Exception in thread Thread-5:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
       "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
-      "    master_bus, master_status, active = self.get_master_bus()\n",
-      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
-      "    from_master = self.master_bus[self.Id].get()\n",
-      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
-      "TypeError: 'Queue' object is not subscriptable\n",
-      "    from_master = self.master_bus[self.Id].get()\n",
-      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
-      "TypeError: 'Queue' object is not subscriptable\n",
-      "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 60, in run\n",
-      "    master_bus, master_status, active = self.get_master_bus()\n",
-      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
-      "    master_bus, master_status, active = self.get_master_bus()\n",
-      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 20, in get_master_bus\n",
-      "    from_master = self.master_bus[self.Id].get()\n",
-      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
-      "TypeError: 'Queue' object is not subscriptable\n",
-      "    from_master = self.master_bus[self.Id].get()\n",
-      "                  ~~~~~~~~~~~~~~~^^^^^^^^^\n",
-      "TypeError: 'Queue' object is not subscriptable\n"
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
+      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
+      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
+      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
+      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
+      "    raise ValueError(\"time data %r does not match format %r\" %\n",
+      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 'BTC'), <system.menv.MEnv object at 0x0000017E83E18D50>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E10710>, <queue.Queue object at 0x0000017E83E10FD0>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
-      "[(2, 'ETH'), <system.menv.MEnv object at 0x0000017E83E1B350>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E110D0>, <queue.Queue object at 0x0000017E83E10450>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
-      "[(3, 'SOL'), <system.menv.MEnv object at 0x0000017E83D2AFD0>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E13910>, <queue.Queue object at 0x0000017E83E11150>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
-      "[(4, 'EGLD'), <system.menv.MEnv object at 0x0000017E83D32910>, <threading.Event at 0x17e83ceb8d0: unset>, <queue.Queue object at 0x0000017E83E12AD0>, <queue.Queue object at 0x0000017E83E12090>, <threading.Barrier at 0x17e83e12e50: waiters=0/4>]\n",
-      "id :  (1, 'BTC')\n",
-      "(1, 'BTC') waiting master's signal ... \n",
-      "id :  (2, 'ETH')\n",
-      "(2, 'ETH') waiting master's signal ... \n",
-      "id :  (3, 'SOL')\n",
-      "(3, 'SOL') waiting master's signal ... \n",
-      "id :  (4, 'EGLD')\n",
-      "(4, 'EGLD') waiting master's signal ... \n",
+      " EVENT  --->  2023-02-14 00:00:00 21.84\n",
+      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "||||||    IS EXECUTED    ||||||\n",
+      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
+      "*** LINE {'agentId': 3, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 21.84, 'quantity': 0, 'position': 0, 'side': None, 'state': \"('-', None, False, False)\", 'in_value': 0, 'out_value': 0, 'value': 0.0, 'pnl': 0.0, 'pnl_pct': 0, 'symbol': 'SOL'}\n",
+      "||||||    ADD TO JOURNAL    ||||||\n",
+      " _________ STEP PASS _________\n",
+      "pass to next step\n",
+      "(3, 'SOL') ORDER EXECUTED \n",
+      " EVENT  --->  2023-02-14 00:00:00 44.37\n",
+      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "||||||    IS EXECUTED    ||||||\n",
+      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
+      "*** LINE {'agentId': 4, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 44.37, 'quantity': -2.25377507324769, 'position': -1, 'side': 'SHORT', 'state': \"('Open', 'SHORT', False, False)\", 'in_value': 100.00000000000001, 'out_value': 0, 'value': 100.00000000000001, 'pnl': 0.0, 'pnl_pct': 0.0, 'symbol': 'EGLD'}\n",
+      "||||||    ADD TO JOURNAL    ||||||\n",
+      " _________ STEP PASS _________\n",
+      "pass to next step\n",
+      "(4, 'EGLD') ORDER EXECUTED \n",
+      " EVENT  --->  2023-02-14 00:00:00 22199.84\n",
+      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "||||||    IS EXECUTED    ||||||\n",
+      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
+      "*** LINE {'agentId': 1, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 22199.84, 'quantity': 0.004504536969635817, 'position': 1, 'side': 'LONG', 'state': \"('Open', 'LONG', False, False)\", 'in_value': 100.0, 'out_value': 0, 'value': 100.0, 'pnl': 0.0, 'pnl_pct': 0.0, 'symbol': 'BTC'}\n",
+      "||||||    ADD TO JOURNAL    ||||||\n",
+      " _________ STEP PASS _________\n",
+      "pass to next step\n",
+      "(1, 'BTC') ORDER EXECUTED \n",
+      " EVENT  --->  2023-02-14 00:00:00 1555.71\n",
+      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
+      "||||||    IS EXECUTED    ||||||\n",
+      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
+      "*** LINE {'agentId': 2, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 1555.71, 'quantity': 0.06427933226629641, 'position': 1, 'side': 'LONG', 'state': \"('Open', 'LONG', False, False)\", 'in_value': 99.99999999999999, 'out_value': 0, 'value': 99.99999999999999, 'pnl': 0.0, 'pnl_pct': 0.0, 'symbol': 'ETH'}\n",
+      "||||||    ADD TO JOURNAL    ||||||\n",
+      " _________ STEP PASS _________\n",
+      "pass to next step\n",
+      "(2, 'ETH') ORDER EXECUTED \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-6:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
+      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
+      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
+      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
+      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
+      "    raise ValueError(\"time data %r does not match format %r\" %\n",
+      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agent report {(1, 'BTC'): {'data': 'action executed...', 'fstep': True}, (2, 'ETH'): {'data': 'action executed...', 'fstep': True}, (3, 'SOL'): {'data': 'action executed...', 'fstep': True}, (4, 'EGLD'): {'data': 'action executed...', 'fstep': True}}\n",
       " ---------------   Master : Let's go ... \n",
-      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000017E83E10FD0>, (2, 'ETH'): <queue.Queue object at 0x0000017E83E10450>, (3, 'SOL'): <queue.Queue object at 0x0000017E83E11150>, (4, 'EGLD'): <queue.Queue object at 0x0000017E83E12090>, 'activeAgent': 1}\n",
+      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000025090D85110>, (2, 'ETH'): <queue.Queue object at 0x0000025090D86F90>, (3, 'SOL'): <queue.Queue object at 0x0000025090D7B110>, (4, 'EGLD'): <queue.Queue object at 0x0000025090D79ED0>, 'activeAgent': 1}\n",
       "Master wait finish thier work ... \n"
      ]
     }
@@ -437,7 +521,7 @@
     "master.set_barrier(n=N)\n",
     "\n",
     "for agent_param, strategie in zip(AGENT_PARAMS, STRATEGIES):\n",
-    "    master.addAgent(*agent_param)\n",
+    "    master.add_agent(*agent_param)\n",
     "    master.update_params(*strategie)\n",
     "\n",
     "master.active_agents()\n",
@@ -449,6 +533,16 @@
    "metadata": {},
    "source": [
     "# *End*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "threading.enumerate()"
    ]
   },
   {
