--- a/labs.ipynb
+++ b/labs.ipynb
@@ -367,151 +367,44 @@
      "output_type": "stream",
      "text": [
       "Start id :  (1, 'BTC')\n",
-      "(1, 'BTC') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
       "(1, 'BTC') waiting master's signal ... \n",
       "Start id :  (2, 'ETH')\n",
-      "(2, 'ETH') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
       "(2, 'ETH') waiting master's signal ... \n",
       "Start id :  (3, 'SOL')\n",
-      "(3, 'SOL') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
       "(3, 'SOL') waiting master's signal ... \n",
       "Start id :  (4, 'EGLD')\n",
-      "(4, 'EGLD') start state : {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
       "(4, 'EGLD') waiting master's signal ... \n",
       " ---------------   Master : Let's go ... \n",
-      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000025090D85110>, (2, 'ETH'): <queue.Queue object at 0x0000025090D86F90>, (3, 'SOL'): <queue.Queue object at 0x0000025090D7B110>, (4, 'EGLD'): <queue.Queue object at 0x0000025090D79ED0>, 'activeAgent': 1}\n",
+      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000021D7BC6C5D0>, (2, 'ETH'): <queue.Queue object at 0x0000021D7BC5B190>, (3, 'SOL'): <queue.Queue object at 0x0000021D7BC5B7D0>, (4, 'EGLD'): <queue.Queue object at 0x0000021D7BC58B10>, 'activeAgent': 1}\n",
       "Master wait finish thier work ... \n",
       "(1, 'BTC') - Master signal : start work\n",
       "(4, 'EGLD') - Master signal : start work\n",
+      "(2, 'ETH') - Master signal : start work\n",
       "(3, 'SOL') - Master signal : start work\n",
-      "(2, 'ETH') - Master signal : start work\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-7:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
-      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
-      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
-      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
-      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
-      "    raise ValueError(\"time data %r does not match format %r\" %\n",
-      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n",
-      "Exception in thread Thread-8:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
-      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
-      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
-      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
-      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
-      "    raise ValueError(\"time data %r does not match format %r\" %\n",
-      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n",
-      "Exception in thread Thread-5:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
-      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
-      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
-      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
-      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
-      "    raise ValueError(\"time data %r does not match format %r\" %\n",
-      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " EVENT  --->  2023-02-14 00:00:00 21.84\n",
-      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
-      "||||||    IS EXECUTED    ||||||\n",
-      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
-      "*** LINE {'agentId': 3, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 21.84, 'quantity': 0, 'position': 0, 'side': None, 'state': \"('-', None, False, False)\", 'in_value': 0, 'out_value': 0, 'value': 0.0, 'pnl': 0.0, 'pnl_pct': 0, 'symbol': 'SOL'}\n",
-      "||||||    ADD TO JOURNAL    ||||||\n",
       " _________ STEP PASS _________\n",
-      "pass to next step\n",
-      "(3, 'SOL') ORDER EXECUTED \n",
-      " EVENT  --->  2023-02-14 00:00:00 44.37\n",
-      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
-      "||||||    IS EXECUTED    ||||||\n",
-      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
-      "*** LINE {'agentId': 4, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 44.37, 'quantity': -2.25377507324769, 'position': -1, 'side': 'SHORT', 'state': \"('Open', 'SHORT', False, False)\", 'in_value': 100.00000000000001, 'out_value': 0, 'value': 100.00000000000001, 'pnl': 0.0, 'pnl_pct': 0.0, 'symbol': 'EGLD'}\n",
-      "||||||    ADD TO JOURNAL    ||||||\n",
-      " _________ STEP PASS _________\n",
-      "pass to next step\n",
       "(4, 'EGLD') ORDER EXECUTED \n",
-      " EVENT  --->  2023-02-14 00:00:00 22199.84\n",
-      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
-      "||||||    IS EXECUTED    ||||||\n",
-      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
-      "*** LINE {'agentId': 1, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 22199.84, 'quantity': 0.004504536969635817, 'position': 1, 'side': 'LONG', 'state': \"('Open', 'LONG', False, False)\", 'in_value': 100.0, 'out_value': 0, 'value': 100.0, 'pnl': 0.0, 'pnl_pct': 0.0, 'symbol': 'BTC'}\n",
-      "||||||    ADD TO JOURNAL    ||||||\n",
+      " *** endDate : 2023-10-01\n",
+      "(4, 'EGLD') has finished step\n",
       " _________ STEP PASS _________\n",
-      "pass to next step\n",
+      "(3, 'SOL') ORDER EXECUTED \n",
+      " *** endDate : 2023-10-01\n",
+      "(3, 'SOL') has finished step\n",
+      " _________ STEP PASS _________\n",
       "(1, 'BTC') ORDER EXECUTED \n",
-      " EVENT  --->  2023-02-14 00:00:00 1555.71\n",
-      " STATE :  {'portfolio': {'capital': 100, 'risk_value': 0, 'save_value': 0, 'available_value': 100}, 'indicator': {'average': 0, 'dist_sl': 0, 'profit_factor': 0, 'win_rate': 0, 'drawdown': 0, 'recovery': 0}}\n",
-      "||||||    IS EXECUTED    ||||||\n",
-      "||||||    PORTFOLIO IS UPDATED    ||||||\n",
-      "*** LINE {'agentId': 2, 'date': Timestamp('2023-02-14 00:00:00'), 'price': 1555.71, 'quantity': 0.06427933226629641, 'position': 1, 'side': 'LONG', 'state': \"('Open', 'LONG', False, False)\", 'in_value': 99.99999999999999, 'out_value': 0, 'value': 99.99999999999999, 'pnl': 0.0, 'pnl_pct': 0.0, 'symbol': 'ETH'}\n",
-      "||||||    ADD TO JOURNAL    ||||||\n",
+      " *** endDate : 2023-10-01\n",
+      "(1, 'BTC') has finished step\n",
       " _________ STEP PASS _________\n",
-      "pass to next step\n",
-      "(2, 'ETH') ORDER EXECUTED \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-6:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\threading.py\", line 1038, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 69, in run\n",
-      "    stop = self.stop_simulation(event.date) if event is not None else False\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\magent.py\", line 38, in stop_simulation\n",
-      "    date = datetime.strptime(endDate, \"%Y-%m-%d %H:%M:%S\")\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 568, in _strptime_datetime\n",
-      "    tt, fraction, gmtoff_fraction = _strptime(data_string, format)\n",
-      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\Dell\\miniconda3\\envs\\WcedSyst\\Lib\\_strptime.py\", line 349, in _strptime\n",
-      "    raise ValueError(\"time data %r does not match format %r\" %\n",
-      "ValueError: time data '2023-10-01' does not match format '%Y-%m-%d %H:%M:%S'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(2, 'ETH') ORDER EXECUTED \n",
+      " *** endDate : 2023-10-01\n",
+      "(2, 'ETH') has finished step\n",
+      " //////////////// *** Barrier passee *** \\\\\\\\\\\\\\\\\n",
+      "(2, 'ETH') waiting master's signal ... \n",
+      "(4, 'EGLD') waiting master's signal ... \n",
+      "(3, 'SOL') waiting master's signal ... \n",
+      "(1, 'BTC') waiting master's signal ... \n",
       "Agent report {(1, 'BTC'): {'data': 'action executed...', 'fstep': True}, (2, 'ETH'): {'data': 'action executed...', 'fstep': True}, (3, 'SOL'): {'data': 'action executed...', 'fstep': True}, (4, 'EGLD'): {'data': 'action executed...', 'fstep': True}}\n",
       " ---------------   Master : Let's go ... \n",
-      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000025090D85110>, (2, 'ETH'): <queue.Queue object at 0x0000025090D86F90>, (3, 'SOL'): <queue.Queue object at 0x0000025090D7B110>, (4, 'EGLD'): <queue.Queue object at 0x0000025090D79ED0>, 'activeAgent': 1}\n",
+      "master_bus : {(1, 'BTC'): <queue.Queue object at 0x0000021D7BC6C5D0>, (2, 'ETH'): <queue.Queue object at 0x0000021D7BC5B190>, (3, 'SOL'): <queue.Queue object at 0x0000021D7BC5B7D0>, (4, 'EGLD'): <queue.Queue object at 0x0000021D7BC58B10>, 'activeAgent': 1}\n",
       "Master wait finish thier work ... \n"
      ]
     }
