change equity_plot legend

--- a/labs.ipynb
+++ b/labs.ipynb
@@ -7222,9 +7222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'BTC')\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -7233,7 +7240,7 @@
        },
        "data": [
         {
-         "name": "(1, 'BTC') : market",
+         "name": "market",
          "type": "scatter",
          "x": [
           "2022-02-14T00:00:00",
@@ -8433,7 +8440,7 @@
          "yaxis": "y"
         },
         {
-         "name": "(1, 'BTC')",
+         "name": "pnl pct",
          "type": "bar",
          "x": [
           "2022-02-14T00:00:00",
@@ -9633,7 +9640,7 @@
          "yaxis": "y"
         },
         {
-         "name": " cum rets (1, 'BTC')",
+         "name": " cum rets",
          "type": "scatter",
          "x": [
           "2022-02-14T00:00:00",
@@ -10833,7 +10840,7 @@
          "yaxis": "y"
         },
         {
-         "name": "(1, 'BTC') : drawdown",
+         "name": "drawdown",
          "type": "scatter",
          "x": [
           "2022-02-14T00:00:00",
